// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button fixbug renders {0} , 0 and {false} 1`] = `
<button
  class="ant-btn"
  type="button"
>
  0
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 2`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    0
  </span>
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 3`] = `
<button
  class="ant-btn"
  type="button"
/>
`;

exports[`Button renders Chinese characters correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 2`] = `
<button
  class="ant-btn"
  type="button"
>
  <i
    class="anticon anticon-search"
  />
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 3`] = `
<button
  class="ant-btn"
  type="button"
>
  <i
    class="anticon anticon-search"
  />
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;

exports[`Button should support link button 1`] = `
<a
  class="ant-btn"
  href="http://ant.design"
  target="_blank"
>
  <span>
    link button
  </span>
</a>
`;
